# rocket-todo-app

./: Cargo.toml  README.md  Rocket.toml
migrations/2022-09-19-022402_create_todos/: up.sql
src/: main.rs  models.rs  schema.rs
